--- a/front/package.json
+++ b/front/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.5",
     "axios": "^1.2.3",
+    "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2"
   },
